feature: add method leave
