# src/modules/chats/dto/requests/post-leave-chat.dto.ts
@@ -1,0 +1,9 @@
+import { IsArray, IsUUID } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LeaveChatsDto {
+    @IsUUID('all', { each: true })
+    @IsArray()
+    @ApiProperty({ description: 'Id chat' })
+    readonly chatIds!: string[];
+}
